# stocker

./: .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  README.md  plan.md  pyproject.toml
.claude/: settings.json
.claude/agents/: markdown-writer.md  unit-test-writer.md
.claude/commands/: commit.md  ship.md
.claude/hooks/: ci-lint-full-scope.sh  doc-sync-check.sh  notify-waiting.sh  pyright-full-scope.sh  src-first-requires-tests.sh  tests-writer-guard.sh
.claude/plans/: phase3-purring-creek.md
.github/workflows/: ci.yml
config/: holidays.yaml  universe.yaml  universe_top100.yaml  universe_top50.yaml
docs/: architecture.md  operations-playbook.md  phase-history.md  step_e_followup_plan.md  step_f_strategy_pool_plan.md
docs/adr/: 0009-python-312-upgrade.md  0010-tdd-order-enforcement.md  0011-apscheduler-adoption-single-process.md  0012-monitor-notifier-design.md  0014-runtime-state-recovery.md  0015-partial-fill-policy.md  0016-kis-minute-bar-cache.md  0018-holiday-calendar-yaml.md  0019-phase2-backtest-fail-remediation.md  0020-sensitivity-parallel-execution.md  0021-step-e-vwap-gap-failed.md  0022-step-f-gate-redefinition.md  0023-rsi-mr-strategy-adoption-conditional.md  0024-walk-forward-pass-threshold.md  0025-rsi-mr-operational-risk-limits.md  0026-formatter-unification-ruff-only.md  README.md
docs/runbooks/: c1_universe_full_backfill_2026-05-02.md  c2_walk_forward_rsi_mr_2026-05-02.md  c3_069500_adjusted_plausibility_2026-05-03.md  c4_rsi_mr_sensitivity_2026-05-03.md  step_a_home_resume.md  (+13 more)
scripts/: backfill_daily_bars.py  backfill_minute_bars.py  backtest.py  build_liquidity_ranking.py  build_universe_subset.py  c4_rsi_mr_sensitivity.py  debug_kis_minute.py  healthcheck.py  sensitivity.py  verify_069500_adjusted.py  walk_forward_rsi_mr.py
tests/: test_backfill_daily_bars_cli.py  test_backfill_minute_bars.py  test_backtest_cli.py  test_backtest_dca.py  test_backtest_engine.py  test_backtest_golden_cross.py  test_backtest_low_volatility.py  test_backtest_momentum.py  test_backtest_prev_close_provider.py  test_backtest_rsi_mr.py  test_backtest_rsi_mr_sensitivity.py  test_build_liquidity_ranking.py  test_build_universe_subset.py  test_calendar.py  test_config.py  test_daily_bar_loader.py  test_debug_kis_minute.py  test_executor.py  test_historical.py  test_kis_client.py  test_kis_minute_bar_loader.py  test_main.py  test_minute_csv.py  test_notifier.py  test_rate_limiter.py  test_realtime.py  test_risk_manager.py  test_safety.py  test_sensitivity.py  test_sensitivity_cli.py  test_sensitivity_incremental_callback.py  test_sensitivity_incremental_flush.py  test_sensitivity_parallel.py  test_storage_db.py  test_strategy_dca.py  test_strategy_factory.py  test_strategy_gap_reversal.py  test_strategy_golden_cross.py  test_strategy_low_volatility.py  test_strategy_momentum.py  (+6 more)
(+52 files in other folders)
