[project]
name = "stock-agent"
version = "0.1.0"
description = "Python 한국주식 자동매매 시스템 (KIS Developers + ORB)"
requires-python = ">=3.12"
readme = "README.md"
dependencies = [
    "python-kis>=2.1.0",
    "python-telegram-bot>=21.0",
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "loguru>=0.7",
    "pykrx>=1.0.45",
    "pyyaml>=6.0",
    "apscheduler>=3.10,<4.0",
]

[dependency-groups]
dev = [
    "ruff>=0.6",
    "pytest>=8.3",
    "pytest-mock>=3.14",
    "pre-commit>=3.8",
    "pyright>=1.1.380",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/stock_agent"]

[tool.ruff]
line-length = 100
target-version = "py312"
src = ["src", "scripts", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "N", "SIM"]

[tool.ruff.lint.per-file-ignores]
# 테스트 함수명에 한글 사용 허용 (가독성 우선).
# N806: 지연 import 패턴(예: `KisMinuteBarLoader, _ = _import_loader()`) 에서
# 클래스 변수명을 클래스 정체성 유지 위해 대문자로 유지 — 테스트에 한정.
"tests/**/*.py" = ["N802", "N806"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
markers = [
    "preserve_env_file: autouse fixture 의 env_file=None 덮기를 건너뛴다 (model_config 계약 검증용)",
]

[tool.pyright]
# 에디터 LSP 와 CI 게이트 공통 설정.
#
# CI 는 `uv run pyright src scripts tests` 실행 — src/scripts/tests 모두 pyright
# clean (경고 0) 상태로 신규 드리프트를 즉시 차단한다.
venvPath = "."
venv = ".venv"
include = ["src", "scripts", "tests"]
extraPaths = ["src"]
pythonVersion = "3.12"
reportMissingImports = "error"
